# face_align

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  facePosePrediction.cpp  facealign_sample.cpp  gb_regression_tree.cpp  meanshape.txt  objdetect.hpp  sampleFacePosePrediction.cpp  sampleFaceTrain.cpp  sample_Test_Accuracy.cpp  samplevideoalign.cpp  train_face_align.cpp  train_shape  train_shape.cpp  train_shape.hpp
examples/: sample_Face_Train.cpp  sample_Filter.cpp  sample_Landmark_Detection.cpp  sample_Landmark_Prediction.cpp  sample_Test_Accuracy.cpp
include/: train_shape.hpp
src/: facePosePrediction.cpp  face_landmark_detection.cpp  gb_regression_tree.cpp  train_face_align.cpp  train_shape.cpp
