cmake_minimum_required(VERSION 2.8)
project(KazemiFaceAlign)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCES train_shape.hpp train_shape.cpp gb_regression_tree.cpp train_face_align.cpp facePosePrediction.cpp sampleFacePosePrediction.cpp)
add_executable(test ${SOURCES})
find_package( OpenCV 3 REQUIRED PATHS "/usr/local/include/opencv" )
include_directories( ${OpenCV_INCLUDE_DIRS})
target_link_libraries( test ${OpenCV_LIBS} )